Fix wrapping issue with pre.

--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,9 @@
     transform: rotate(360deg);
   }
 }
+
+pre {
+  white-space: pre-wrap;
+  word-wrap: break-word;
+  text-align: justify;
+}
